--- a/cases/ev-demand.html
+++ b/cases/ev-demand.html
@@ -14,44 +14,67 @@
   <a href="../index.html" class="text-emerald-600 hover:underline mb-4 inline-block">← Back to Cases</a>
 </header>
 
-<main class="max-w-4xl mx-auto px-6 mb-40">
-  <section class="mb-10">
+<main class="max-w-5xl mx-auto px-6 mb-40 space-y-12">
+
+  <!-- Problem -->
+  <section>
     <h2 class="text-2xl font-semibold mb-2">Problem</h2>
-    <p>Over-stocking in some regions and stockouts in others caused inefficiencies in operations and increased holding costs.</p>
+    <p>
+      Over-stocking in some regions and stockouts in others led to operational inefficiencies,
+      increased holding costs, and missed sales opportunities. Management needed a
+      data-driven forecast model to optimize inventory allocation across Germany.
+    </p>
   </section>
 
-  <section class="mb-10">
+  <!-- Approach -->
+  <section>
     <h2 class="text-2xl font-semibold mb-2">Approach</h2>
-    <p>Cleaned 2.3M transaction rows in SQL, performed region-wise demand analysis, seasonal trend analysis, and simulated stock allocation.</p>
+    <p>
+      Collected 2.3 million transactional rows from <a href="https://www.autoscout24.com/" target="_blank" class="underline text-blue-600">AutoScout24</a> and 
+      <a href="https://www.zsw-bw.de/en/media-center/data-service.html" target="_blank" class="underline text-blue-600">ZSW Electromobility</a>.
+      Performed SQL cleaning, region-wise demand analysis, seasonal trend identification, and
+      stock allocation simulations.
+    </p>
   </section>
 
-  <section class="mb-10">
+  <!-- Recommendation -->
+  <section>
     <h2 class="text-2xl font-semibold mb-2">Recommendation</h2>
-    <p>Implement a region-wise inventory allocation dashboard with weekly SQL updates for the operations team.</p>
+    <p>
+      Implement a region-specific inventory allocation dashboard, updated weekly, enabling
+      operations teams to proactively manage stock levels and reduce both overstock and stockouts.
+    </p>
   </section>
 
-  <section class="mb-10">
+  <!-- Implementation -->
+  <section>
     <h2 class="text-2xl font-semibold mb-2">Implementation</h2>
-    <p>Power BI dashboard with interactive slider to simulate demand changes by region, enabling data-driven allocation decisions.</p>
+    <p>
+      Developed a Power BI dashboard with:
+    </p>
+    <ul class="list-disc list-inside">
+      <li>Interactive slider to simulate monthly demand changes per region</li>
+      <li>Visual comparison of forecast vs. actual demand</li>
+      <li>Heatmaps for stock level alerts across 6 regions</li>
+    </ul>
+    <img src="../assets/images/ev-dashboard.png" alt="EV Dashboard" class="rounded-lg shadow-lg mt-4">
   </section>
 
-  <section class="mb-10">
+  <!-- Results / KPIs -->
+  <section>
     <h2 class="text-2xl font-semibold mb-2">Results / KPIs</h2>
     <ul class="list-disc list-inside">
-      <li>Inventory −7%</li>
-      <li>Forecast error −22%</li>
-      <li>Decision speed +15%</li>
-      <li>Regional allocation optimized across 6 regions</li>
+      <li>Inventory reduced by 7%</li>
+      <li>Forecast error decreased by 22%</li>
+      <li>Decision-making speed improved by 15%</li>
+      <li>Optimized regional allocation across 6 key German regions</li>
     </ul>
+    <canvas id="evChart" class="mt-6"></canvas>
   </section>
 
-  <section>
-    <h2 class="text-2xl font-semibold mb-2">Interactive Chart</h2>
-    <canvas id="evChart"></canvas>
-  </section>
 </main>
 
 <script src="../scripts/charts.js"></script>
+
 </body>
 </html>
-
